# cpp-vscode-bootstrap

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh
src/: CMakeLists.txt
test/: CMakeLists.txt
